--- a/tools/go-agent/instrument/plugins/templates/method_inserts.tmpl
+++ b/tools/go-agent/instrument/plugins/templates/method_inserts.tmpl
@@ -1,10 +1,10 @@
 if {{ range $index, $value := .Results -}}
 	_sw_inv_res_{{$index -}},
-{{- end -}}_sw_invocation, _sw_keep := {{.AdapterPreFuncName}}({{ range $index, $value := .Recvs -}}
+{{- end -}}_sw_invocation, _sw_skip := {{.AdapterPreFuncName}}({{ range $index, $value := .Recvs -}}
 	{{ if ne $index 0}},{{ end }}&{{$value.Name -}},
 {{- end -}}{{ range $index, $value := .Parameters -}}
 	{{ if ne $index 0}},{{ end }}&{{$value.Name -}}
-{{- end -}}); !_sw_keep { return {{ range $index, $value := .Results -}}
+{{- end -}}); _sw_skip { return {{ range $index, $value := .Results -}}
 	{{ if ne $index 0}},{{ end }}_sw_inv_res_{{$index -}}
 {{- end -}} } else { defer func() { {{.AdapterPostFuncName}}(_sw_invocation{{- range $index, $value := .Results -}}
 ,&{{- $value.Name -}}
