feat: add toolkit logging impl (#202)

--- a/tools/go-agent/instrument/logger/frameworks/templates/init.tmpl
+++ b/tools/go-agent/instrument/logger/frameworks/templates/init.tmpl
@@ -27,7 +27,9 @@ var {{.LogReporterLabelsVarName}} = {{.LogTypeInConfig.Reporter.LabelKeys.ToGoSt
 
 type logReporter interface {
     ReportLog(ctx, time interface{}, level, msg string, labels map[string]string)
+    GetLogContext(withEndpoint bool) interface{}
 }
+
 var {{.LogReportFuncName}} = func(ctx interface{}, time time.Time, level, msg string, labels map[string]string) {
     op := {{.GetOperatorMethodName}}()
     if op == nil {
