Add agent self-observability

--- a/tools/go-agent/instrument/plugins/templates/method_intercept_before.tmpl
+++ b/tools/go-agent/instrument/plugins/templates/method_intercept_before.tmpl
@@ -1,8 +1,12 @@
+{{.FuncID}}_interTimeCost = int64(0)
+{{.FuncID}}_beforeInterStart = operator.NanoTime()
 defer func() {
 	if err := recover(); err != nil {
+	    operator.ErrorOfPlugin("{{.InstrumentName}}")
 		// log error
 		log.Errorf("execute interceptor before invoke error, instrument name: %s, interceptor name: %s, function ID: %s, error: %v, stack: %s",
 		    "{{.InstrumentName}}", "{{.InterceptorDefineName}}", "{{.FuncID}}", err, tracing.DebugStack())
+		{{.FuncID}}_interTimeCost += operator.NanoTime() - {{.FuncID}}_beforeInterStart
 	}
 }()
 invocation = &operator.realInvocation{}
@@ -33,6 +37,7 @@ if err := {{.InterceptorVarName}}.BeforeInvoke(invocation); err != nil {
 	// using go2sky log error
 	log.Warnf("execute interceptor before invoke error, instrument name: %s, interceptor name: %s, function ID: %s, error: %v",
     		    "{{.InstrumentName}}", "{{.InterceptorDefineName}}", "{{.FuncID}}", err)
+    {{.FuncID}}_interTimeCost += operator.NanoTime() - {{.FuncID}}_beforeInterStart
 
 	return {{ range $index, $value := .Results -}}
 def_res_{{$index}},
@@ -44,10 +49,14 @@ if (invocation.isContinue) {
         def_res_{{$index}} = (invocation.returnValues[{{$index}}]).({{$value.PackagedTypeName}})
     }
     {{- end}}
+    {{.FuncID}}_interTimeCost += operator.NanoTime() - {{.FuncID}}_beforeInterStart
+
 	return {{ range $index, $value := .Results -}}
     def_res_{{$index}},
 {{- end}}invocation, true
 }
+{{.FuncID}}_interTimeCost += operator.NanoTime() - {{.FuncID}}_beforeInterStart
+
 return {{ range $index, $value := .Results -}}
 def_res_{{$index}},
 {{- end}}invocation, false
