--- a/tools/go-agent/instrument/plugins/templates/method_intercept_after.tmpl
+++ b/tools/go-agent/instrument/plugins/templates/method_intercept_after.tmpl
@@ -1,8 +1,11 @@
 defer func() {
 	if r := recover(); r != nil {
+        operator.ErrorOfPlugin("{{.InstrumentName}}")
 		// log error
 		log.Errorf("execute interceptor after invoke error, instrument name: %s, interceptor name: %s, function ID: %s, error: %v, stack: %s",
 		    "{{.InstrumentName}}", "{{.InterceptorDefineName}}", "{{.FuncID}}", r, tracing.DebugStack())
+        {{.FuncID}}_interTimeCost += operator.NanoTime() - {{.FuncID}}_beforeInterStart
+        operator.DurationOfInterceptor({{.FuncID}}_interTimeCost)
 	}
 }()
 
@@ -25,3 +28,5 @@ if (invocation.isContinue) {
     }
     {{- end }}
 }
+{{.FuncID}}_interTimeCost += operator.NanoTime() - {{.FuncID}}_beforeInterStart
+operator.DurationOfInterceptor({{.FuncID}}_interTimeCost)
